<resources>
    <string name="app_name">Memory</string>
    <string name="title_memory_detail">Memory Detail</string>
    <string name="title_activity_add_memory">AddMemory</string>
    <string name="date">Date</string>
    <string name="tags">Tags</string>
    <string name="memory">Memory</string>
    <string name="tags_hint">Comma-separated tags</string>
    <string name="createMemory">Create Memory</string>
    <string name="dateError">Error! Please enter a valid date. The accepted format is: Month–day–year hour:minutes am/pm (e.g. 5–21–16 10:40 am)</string>
    <string name="emptyMemoryError">Cannot create empty memory.</string>
    <string name="action_delete">Delete</string>
    <string name="edit_memory_button">Save edit</string>
    <string name="create_memory_button">Create memory</string>
    <string name="action_export">Export memories as csv</string>
    <string name="action_search">Search</string>
</resources>
